Final content tweaks before sending out; Fix top spacing on first print page; add PDF version

--- a/index.css
+++ b/index.css
@@ -13,7 +13,7 @@ body {
     line-height: 1.30;
 }
 main {
-    margin: 0 auto;
+    margin: .25in auto;
     width: 8.5in;
 }
 a {
@@ -199,7 +199,9 @@ section > h1 {
 @media print {
     main {
         box-decoration-break: clone;
+        margin: 0;
         padding: .25in;
+        width: 100%;
     }
     .recommendations {
         display: none;
